Fix - Description box remains at same size
Fix description box size shrinking vertically & horizontally if the provided string is too short (which would change the positioning of the picture/index container and buttons container as a result).

--- a/root/frontend/src/components/ListItem/ListItem.css
+++ b/root/frontend/src/components/ListItem/ListItem.css
@@ -1,8 +1,10 @@
+:root {
+    --item-description-line-height: 1.25em;
+}
 .item-container {
     background: lightgrey;
     display: flex;
     width: 80vw;
-    /* width: auto; */
     margin: auto;
     align-items: stretch;
     justify-content: space-around;
@@ -33,6 +35,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    width: 100%;
 }
 .item-name,
 .item-status,
@@ -54,6 +57,8 @@
     text-overflow: ellipsis;
     margin: 0px 10px;
     font-family: Verdana;
+    line-height: var(--item-description-line-height);
+    height: calc(var(--item-description-line-height) * 6);
 }
 .item-genres-container {
     display: flex;
